--- a/index.html
+++ b/index.html
@@ -9,20 +9,24 @@
     <title>Cryptosquare</title>
   </head>
   <body>
-    <div class="container">
+    <div class="container main">
       <div class="jumbotron">
         <h1>Cryptosquare</h1>
         <p>Enter a sentence</p>
       </div>
-      <div class="card bg-info">
+      <div class="card bg-secondary">
         <form id="userInputForm">
           <input id="userText" class="form-control form-control-lg" type="text" placeholder="Enter your text here...">
-          <button type="submit" name="button" class="btn btn-secondary btn-lg btn-block">GO!</button>
+          <button type="submit" name="button" class="btn btn-success btn-lg btn-block">GO!</button>
         </form>
       </div>
-      <div class="card bg-danger">
-        <h5 id="encriptedResult"></h5>
+      <div id="result" class="card bg-dark">
+        <h3 id="encriptedResult"></h3>
 
+      </div>
+      <div class="card bg-success">
+        <h2>HEADS: <span id="heads"></span></h2>
+        <h2>TAILS: <span id="tails"></span></h2>
       </div>
 
     </div>
